adds CMake scripts;adds .gitgnore entries;BSD sockets;etc.
-adds CMake scripts:
 -';' -> '+' for .deb file (Debian package) name
 -get current date as version string
-adds .gitgnore entries:
 -executable file name (extensions)
-BSD sockets:
 -(re-)enables tests
-etc.:
 -shell script:SGR color definitions for terminal
 -...

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 
 #Hide FUSE (NTFS file system) (intermediate) files in Linux
 \.fuse_hidden*
+
+#Executable file (extension)
+*.elf
+*.exe
+#Default GCC executable file name: http://en.wikipedia.org/wiki/A.out
+a.out
