cxxopts;CMake;BSD sockets;preprocessor macros;etc.
-cxxopts:
 -for BSD sockets:
  -refactored
  -reformatted
  -compiles with MinGW now
  -better documentation (source code comments)
  -exception handling and informing error messages
 -adds addOptions(...)
-CMake:
 -general create .bat file
 -create debug version .bat file
BSD sockets: builds with CMake under Microsoft Windows 7:
 -client test
 -accept time out test
-preprocessor macros:
 -adds force_inline
 -adds stringize(s)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 *.*~
-**/CMakeFiles
+
+#IDE project files:
+#===================
+#NetBeans IDE project files:
 **/nbproject
+
+#MicroSoft Visual Studio project files:
+*.sln
+*.vcxproj
+*.vcxproj.filters
+
+#Intermediate CMake files:
+**/CMakeFiles
 **/CMakeCache.txt
 **/cmake_install.cmake
 **/Makefile
