--- a/OperatingSystem/Windows/hardware/SMART/tests/read_identity/C_and_C++/CMakeLists.txt
+++ b/OperatingSystem/Windows/hardware/SMART/tests/read_identity/C_and_C++/CMakeLists.txt
@@ -7,6 +7,7 @@ set(cmnSrcDir ${PROJECT_SOURCE_DIR}/../../../../../../..)
 set(CmnSrcOS ${cmnSrcDir}/OperatingSystem)
 set(srcFilePaths
   main.c
+  ${CmnSrcOS}/Windows/hardware/dataCarrier/getIdentityEnRsltMsgs.c
   )
 
 #include(${cmnSrcDir}/compiler/C,C++/staticStdC,StdC++.cmake)
@@ -16,9 +17,8 @@ include_directories(${cmnSrcDir})
 include(${cmnSrcDir}/CMake/ShowMsg_CompLvl.cmake)
 #showInclDirs(6)
 
-if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-  set(exeName ${PROJECT_NAME}_dbg)
-else()
-  set(exeName ${PROJECT_NAME})
-endif()
+include(${cmnSrcDir}/dataType/charStr/suffixCMakeBuildType.cmake)
+set(exeName ${PROJECT_NAME})
+suffixCMakeBuildType(exeName 1)
+
 add_executable(${exeName} ${srcFilePaths})
