adds to .gitgnore:eclipse IDE,doxygen;etc.
commit for pull from github.com

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 *.vcxproj
 *.vcxproj.filters
 
+#eclipse IDE
+#-----------
+.cproject
+.project
+
 #Intermediate CMake files:
 **/CMakeFiles
 **/CMakeCache.txt
@@ -25,3 +30,7 @@
 *.exe
 #Default GCC executable file name: http://en.wikipedia.org/wiki/A.out
 a.out
+
+#Doxygen generated files
+**/html
+**/latex
